<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".api.CoinCapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/tvCryptocurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvCryptocurrency"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"/>

        <EditText
            android:id="@+id/cryptocurrencyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:labelFor="@id/tvCryptocurrency"
            android:hint="@string/hintCryptocurrency"
            android:maxLines="1"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:autofillHints="" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnDescription"
            android:onClick="getCryptocurrencyInfo"
            android:src="@android:drawable/ic_menu_search"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </ScrollView>
</LinearLayout>
